A hell of a lot of changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,15 @@
 loom.platform=forge
-org.gradle.jvmargs=-Xmx2g
+org.gradle.jvmargs=-Xmx4g
 baseGroup = VendAddons
 mcVersion = 1.8.9
+minecraft.version=1.8.9
 modid = VendAddons
-version = 1.0.0
+version = 1.2.0
+forgeVersion=1.8.9-11.15.1.2318
+mcpVersion=stable_22
+
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureoncommand=true
+org.gradle.parallel.threads=4
+essential.defaults.loom=1
