Slayer Overlay changes, Stats Command, TextUtils Updates, Migrating all ChatListeners to a single class. Modifying quite a few other small things

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.parallel=true
 org.gradle.configureoncommand=true
 org.gradle.parallel.threads=4
 essential.defaults.loom=1
+devauth.enabled
